# shed

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
projects/news_agg/: alembic.ini
projects/news_agg/migrations/: env.py
shed/: cli.py  constants.py  core.py  custom_types.py  settings.py  utils.py  validation.py
shed/templates/: alembic.ini  alembic_multi.ini  env.py
tasks/: 01_add_support_to_render_templates.md  02_change_default_environment_to_dev.md  03_fix_path_resolution_for_extract.md
tests/: conftest.py  test_cli_commands.py  test_cli_help.py  test_cli_postgres.py  test_settings.py
tests/fixtures/: pg_schemas.yml
tests/fixtures/projects/pg_schemas/: models.py
